complete html structure & add css variables

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
   <title>Social Media Portfolio</title>
 </head>
 <body>
-  
+  <main class="app">
+    <article class="portfolio">
+      <header class="portfolio__header">
+        <img class="portfolio__picture" src="./assets/images/avatar-jessica.jpeg" alt="Jessica Randall's profile photo"/>
+        <h1 class="portfolio__author">Jessica Randall</h1>
+        <address class="portfolio__address">London, United Kingdom</address>
+      </header>
+
+      <ul class="portfolio___list">
+        <li class="portfolio__list-item"></li>
+        <li class="portfolio__list-item"></li>
+        <li class="portfolio__list-item"></li>
+        <li class="portfolio__list-item"></li>
+        <li class="portfolio__list-item"></li>
+      </ul>
+    </article>
+  </main>
 </body>
 </html>
