--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h1 class="portfolio__author">Jessica Randall</h1>
         <address class="portfolio__address">London, United Kingdom</address>
       </header>
+      <p class="portfolio__description">"Front end developer & avid reader</p>
 
       <ul class="portfolio___list">
         <li class="portfolio__list-item"></li>
