styling: add hover animations, correct height display for portfolio

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <h1 class="portfolio__author">Jessica Randall</h1>
         <address class="portfolio__address">London, United Kingdom</address>
       </header>
-      <p class="portfolio__description">"Front end developer & avid reader</p>
+      <p class="portfolio__description">"Front end developer & avid reader"</p>
 
       <ul class="portfolio___list">
-        <li class="portfolio__list-item"></li>
-        <li class="portfolio__list-item"></li>
-        <li class="portfolio__list-item"></li>
-        <li class="portfolio__list-item"></li>
-        <li class="portfolio__list-item"></li>
+        <li class="portfolio__list-item">Github</li>
+        <li class="portfolio__list-item">Frontend Mentor</li>
+        <li class="portfolio__list-item">LinkedIn</li>
+        <li class="portfolio__list-item">Twitter</li>
+        <li class="portfolio__list-item">Instagram</li>
       </ul>
     </article>
   </main>
